- Can travel through blocks and other mobs
- Detects players at relatively far distances
- Will occasionally "hypnotize" nearby mobs, causing them to target the player
- Finds dropped items and throws them to damage the player
- Is invisible in the darkness, aside from a particle trail
- Will apply the Haunt mob effect if it has been in direct contact with a player for long enough

## REBRUSH
- A new enchantment found from Chests in Catacombs
- At a rate of 10% per level, has a chance to let a Suspicious block be looted again
    - Has a 3% chance per level to let a Suspicious block be looted again after the first excavation
- Goes up to level 3

## REAPING
- A new enchantment found from Chests in Catacombs
- Adds an additional 2 xp per level to experience orbs upon a mob's death
- Goes up to level 3

## BUILDING BLOCKS
- Added Granite Bricks
    - Added Chiseled Granite Bricks
    - Added Cracked Granite Bricks
    - Added Granite Brick Stairs
    - Added Granite Brick Slab
    - Added Granite Brick Wall
    - Added Mossy Granite Bricks
        - Added Mossy Granite Brick Stairs
        - Added Mossy Granite Brick Slab
        - Added Mossy Granite Brick Wall
- Added Diorite Bricks
    - Added Chiseled Diorite Bricks
    - Added Cracked Diorite Bricks
    - Added Diorite Brick Stairs
    - Added Diorite Brick Slab
    - Added Diorite Brick Wall
    - Added Mossy Diorite Bricks
        - Added Mossy Diorite Brick Stairs
        - Added Mossy Diorite Brick Slab
        - Added Mossy Diorite Brick Wall
- Added Andesite Bricks
    - Added Chiseled Andesite Bricks
    - Added Cracked Andesite Bricks
    - Added Andesite Brick Stairs
    - Added Andesite Brick Slab
    - Added Andesite Brick Wall
    - Added Mossy Andesite Bricks
        - Added Mossy Andesite Brick Stairs
        - Added Mossy Andesite Brick Slab
        - Added Mossy Andesite Brick Wall
- Added the Calcite block family
    - Added Calcite Stairs
    - Added Calcite Slab
    - Added Calcite wall