@@ -1,0 +1,47 @@
+package net.frozenblock.trailiertales.datagen.loot;
+
+import java.util.concurrent.CompletableFuture;
+import java.util.function.BiConsumer;
+import net.fabricmc.fabric.api.datagen.v1.FabricDataOutput;
+import net.fabricmc.fabric.api.datagen.v1.provider.SimpleFabricLootTableProvider;
+import net.frozenblock.trailiertales.registry.RegisterEntities;
+import net.frozenblock.trailiertales.registry.RegisterItems;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.world.level.storage.loot.LootPool;
+import net.minecraft.world.level.storage.loot.LootTable;
+import net.minecraft.world.level.storage.loot.entries.LootItem;
+import net.minecraft.world.level.storage.loot.functions.EnchantedCountIncreaseFunction;
+import net.minecraft.world.level.storage.loot.functions.SetItemCountFunction;
+import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
+import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
+import net.minecraft.world.level.storage.loot.providers.number.UniformGenerator;
+import org.jetbrains.annotations.NotNull;
+
+public class TTEntityLootProvider extends SimpleFabricLootTableProvider {
+	private final CompletableFuture<HolderLookup.Provider> registries;
+
+	public TTEntityLootProvider(FabricDataOutput output, CompletableFuture<HolderLookup.Provider> registries) {
+		super(output, registries, LootContextParamSets.ENTITY);
+		this.registries = registries;
+	}
+
+	@Override
+	public void generate(@NotNull BiConsumer<ResourceKey<LootTable>, LootTable.Builder> output) {
+		HolderLookup.Provider registryLookup = this.registries.join();
+
+		output.accept(
+			RegisterEntities.APPARITION.getDefaultLootTable(),
+			LootTable.lootTable()
+				.withPool(
+					LootPool.lootPool()
+						.setRolls(ConstantValue.exactly(1F))
+						.add(
+							LootItem.lootTableItem(RegisterItems.ECTOPLASM)
+								.apply(SetItemCountFunction.setCount(UniformGenerator.between(-1F, 1F)))
+								.apply(EnchantedCountIncreaseFunction.lootingMultiplier(registryLookup, UniformGenerator.between(0F, 1F)))
+						)
+				)
+		);
+	}
+}
