@@ -7,6 +7,8 @@
   "enchantment.trailiertales.rebrush": "Rebrush",
   "enchantment.trailiertales.reaping": "Reaping",
 
+  "item.trailiertales.ectoplasm": "Ectoplasm",
+
   "item.trailiertales.bait_pottery_sherd": "Bait Pottery Sherd",
   "item.trailiertales.bloom_pottery_sherd": "Bloom Pottery Sherd",
   "item.trailiertales.bullseye_pottery_sherd": "Bullseye Pottery Sherd",
